--- a/lobby/index.html
+++ b/lobby/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lobby</title>
+        <title>Lobby - 2</title>
         <script src="/javascript/jquery-1.7.1.min.js"></script>
         <script type="text/javascript">
             var userinfo = "";
@@ -45,12 +45,12 @@
 
 
         <h1>Lobby</h1>
-        <div id="login">
+        <form id="login">
             (Hint try username: "Eli", password: "b")<br/>
             Name: <input type="text" id="name"/>
             Password: <input type="password" id="password" />
             <input type="button" value="submit" onclick="sendLoginData()" />
-        </div>
+        </form>
         <div id="submitted"></div>
         <div id="complete"></div>
         <div id="a2"></div>
