--- a/lobby/index.html
+++ b/lobby/index.html
@@ -44,7 +44,7 @@
     <body>
 
 
-        <h1>Lobby</h1>
+        <h1>Noah's Lobby</h1>
         <form id="login">
             (Hint try username: "Eli", password: "b")<br/>
             Name: <input type="text" id="name"/>
