--- a/lobby/index.html
+++ b/lobby/index.html
@@ -2,58 +2,37 @@
 <html>
     <head>
         <title>Lobby - 2</title>
-        <script src="/javascript/jquery-1.7.1.min.js"></script>
-        <script type="text/javascript">
-            var userinfo = "";
-            function requestGameListData() {
-                $.ajax({
-                    type: "POST",
-                    url: "/lobbyDATA",
-                    dataType: "json",
-                    contentType: 'application/json; charset=UTF-8',
-                    data: JSON.stringify({gamelist_request: true}),
-                    success: function (data, textStatus, jqXHR) {
+	<link rel="stylesheet" type="text/css" href="/css/lobby.css">
+        <script src="/javascript/jquery-1.7.1.min.js" type="text/javascript"></script>
+        <script src="/javascript/lobby.js" type="text/javascript"></script>
 
-                    }
-                });
-            }
-            function sendLoginData() {
-                var userdata = {
-                    name: document.getElementById("name").value,
-                    password: document.getElementById("password").value
-                };
-                $.ajax({
-                    type: "POST",
-                    url: "/lobbyDATA",
-                    dataType: "json",
-                    contentType: 'application/json; charset=UTF-8',
-                    data: JSON.stringify({login: userdata}),
-                    success: function (data, textStatus, jqXHR) {
-                        if (data["authentication"] === true) {
-                            document.getElementById("login").style.visibility = "Hidden";
-                            document.getElementById("submitted").innerHTML = "Welcome back " + userdata["name"]+"!";
-                            userinfo = data["userinfo"];
-                        } else {
-                            document.getElementById("submitted").innerHTML = "invalid username or password. try again."
-                        }
-                    }
-                });
-            }
-        </script>
+
     </head>
     <body>
 
 
-        <h1>Noah's Lobby</h1>
+        <h1>Lobby</h1>
         <form id="login">
             (Hint try username: "Eli", password: "b")<br/>
             Name: <input type="text" id="name"/>
             Password: <input type="password" id="password" />
-            <input type="button" value="submit" onclick="sendLoginData()" />
+            <input  type="submit" id="loginSubmit" value="Submit"  />
         </form>
         <div id="submitted"></div>
         <div id="complete"></div>
-        <div id="a2"></div>
+	<div id="games">
+	    <input type="text" id="newgamename" value="New Game Name" />
+	    <input type="button" type="submit" value="New Game" onclick="addGame()" />
+	    <span id="newgameerror"></span>
+	    <table id="gamesTable">
+		<tr>
+		    <td> row1 </td>
+		</tr>
+		<tr>
+		    <td> row2 </td>
+		</tr>
+	    </table>
+	</div>
 
     </body>
 </html>
