have games when login

--- a/lobby/index.html
+++ b/lobby/index.html
@@ -30,7 +30,7 @@
         <div id="submitted"></div>
         <div id="complete"></div>
 	<div id="games">
-	    <input type="text" id="newgamename" value="New Game Name" />
+	    <input type="text" id="newgamename" value="" />
 	    <input type="button" type="submit" value="New Game" onclick="addGame()" />
 	    <span id="newgameerror"></span>
 	    <table id="gamesTable">
