--- a/lobby/index.html
+++ b/lobby/index.html
@@ -12,23 +12,24 @@
 
 
         <h1>Lobby</h1>
+		<button type="button" id="displaySignup" onclick="displaySignup()">Signup for new account</button>
+		<button type="button" id="displayLogin" onclick="displayLogin()">Login</button>
 		<form id="signup">
-            Signup For a new account!!<br/>
+            SIGN UP For a new account!!<br/>
             Name: <input type="text" id="signupname"/>
             Password: <input type="password" id="signuppassword" />
             <input  type="submit" id="signupSubmit" value="Submit"  />
         </form>
-		<h2 id="signupSubmitted"></h2>
-
         <form id="login">
-            (Hint try username: "Eli", password: "b")<br/>
+            Login: (Hint try username: "Eli", password: "b")<br/>
             Name: <input type="text" id="name"/>
             Password: <input type="password" id="password" />
             <input  type="submit" id="loginSubmit" value="Submit"  />
         </form>
-		
+		<h2 id="signupSubmitted"></h2>
         <div id="submitted"></div>
         <div id="complete"></div>
+		<button type="button" id="logout" onclick="logout()">Log Out</button>
 	<div id="games">
 	    <input type="text" id="newgamename" value="" />
 	    <input type="button" type="submit" value="New Game" onclick="addGame()" />
