--- a/game/index.html
+++ b/game/index.html
@@ -5,9 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="/css/game.css">
     </header>
     <body>
+		<button type="button" id="leaveGame" onclick="leaveGame()">Leave Game</button>		
 	<table id="userboard">
 		<tr><td>User Name</td><td>Score</td></tr>
+		
 	</table>
         <table id="setboard"></table>
+		
     </body>
 </html>
