displays user scores, other fixes

--- a/game/index.html
+++ b/game/index.html
@@ -6,10 +6,9 @@
     </header>
     <body>
 		<button type="button" id="leaveGame" onclick="leaveGame()">Leave Game</button>		
-	<table id="userboard">
-		<tr><td>User Name</td><td>Score</td></tr>
+	<div id="userboard">
 		
-	</table>
+	</div>
         <table id="setboard"></table>
 		
     </body>
