I hope its working...

--- a/game/index.html
+++ b/game/index.html
@@ -5,10 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="/css/game.css">
     </header>
     <body>
-		<button type="button" id="leaveGame" onclick="leaveGame()">Leave Game</button>		
 	<div id="userboard">
-		
+		<button type="button" id="leaveGame" onclick="leaveGame()">Leave Game</button>		
+		<div id="users"></div>
 	</div>
+	<h2 id="gameOver"></h2>
         <table id="setboard"></table>
 		
     </body>
